[package]
name = "nject-macro"
version = "0.2.3"
edition = "2021"
description = "Zero cost dependency injection macros"
rust-version = "1.60"
homepage = "https://github.com/nicolascotton/nject"
keywords = ["dependency", "injection", "macro"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/nicolascotton/nject"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"

[dev-dependencies]
nject = { path = "../nject", default-features = false }