[package]
name = "nject-macro"
version = "0.4.3"
edition = "2021"
description = "Zero cost dependency injection macros"
rust-version = "1.60"
homepage = "https://github.com/nicolascotton/nject"
keywords = ["dependency", "injection", "dependency-injection", "ioc", "macro"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/nicolascotton/nject"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
nject = { path = "../nject" }
