[package]
name = "nject"
version = "0.2.3"
edition = "2021"
description = "Zero cost dependency injection module"
rust-version = "1.60"
homepage = "https://github.com/nicolascotton/nject"
keywords = ["dependency", "injection", "ioc"]
license = "MIT"
readme = "./README.md"
repository = "https://github.com/nicolascotton/nject"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nject-macro = { path = "../nject-macro", version = "0.2", optional = true }

[features]
default = ["macro"]
macro = ["dep:nject-macro"]